--- a/index.html
+++ b/index.html
@@ -34,18 +34,10 @@
             <div class="all_skills">
                 <div class="skill_details">
                     <div class="skill_icon">
-                        <i class="fab fa-html5 fa-3x" style="color:#DE4B30"></i>
+                        <i class="fab fa-cuttlefish" style="font-size: 36px;color: #eb0c62;">++</i>
                     </div>
                     <div class="skill_desc">
-                        <p style="color:#DE4B30">HTML5</p>
-                    </div>
-                </div>
-                <div class="skill_details">
-                    <div class="skill_icon">
-                        <i class="fab fa-gopher fa-3x" style="color:#5FD4F4"></i>
-                    </div>
-                    <div class="skill_desc">
-                        <p style="color:#5FD4F4">Go</p>
+                        <p style="color: #eb0c62">C++</p>
                     </div>
                 </div>
                 <div class="skill_details">
@@ -58,10 +50,18 @@
                 </div>
                 <div class="skill_details">
                     <div class="skill_icon">
-                        <i class="fas fa-cuttlefish fa-3x">++</i>
+                        <i class="fab fa-html5 fa-3x" style="color:#DE4B30"></i>
                     </div>
                     <div class="skill_desc">
-                        <p style="color:#eb0ca8">C++</p>
+                        <p style="color:#DE4B30">HTML5</p>
+                    </div>
+                </div>
+                <div class="skill_details">
+                    <div class="skill_icon">
+                        <i class="fab fa-java fa-3x" style="color:#5FD4F4"></i>
+                    </div>
+                    <div class="skill_desc">
+                        <p style="color:#5FD4F4">Java</p>
                     </div>
                 </div>
         </section>
@@ -79,9 +79,12 @@
                 </div>
                 <div class="project_tiles">
                     <div class="project_tile">
+                        <div>
+                            <img class="project_pic" src="images/project_ner.PNG" alt="Project_Screenshot">
+                        </div>
                         <div class="project_grid">
                             <div class="project_title">
-                                <h3>Research Project: Named Entity Recognition</h3> 
+                                <h3>Chemical Named Entity Recognition</h3> 
                             </div>
                             <div class="project_links">
                                 <a href="https://github.com/anmolgupta11/CAIR-Intern" target="_blank">GitHub</a>
@@ -135,5 +138,8 @@
             </div>
         </section>
     </main>
+    <footer class="py-3 bg-grey">
+        <p class="m-0 text-dark text-center ">Copyright &copy; Anmol Gupta</p>
+    </footer>
 </body>
 </html>
