--- a/index.html
+++ b/index.html
@@ -64,6 +64,23 @@
                         <p style="color:#5FD4F4">Java</p>
                     </div>
                 </div>
+            </div>
+                <div class="col-md-5 mt-2 mt-md-0">
+                    <div class="rounded-lg bg-sec py-2 px-3">
+                      <h4 class="text-underlined mt-1 text-site-sec">Experience</h4>
+                      <hr>
+                      <br>
+                      <div class="expr-list-item">
+                        <h6>Cloud Native Developer - Intern <span class="float-right text-site-sec text-underlined">Semut Labs</span></h6>
+                        <p class="my-0 text-italic">April 2020 - June 2020</p>
+                      </div>
+                      <br><hr><br>
+                      <div class="expr-list-item">
+                        <h6>Project Trainee <span class="float-right text-site-sec text-underlined">CAIR, DRDO</span></h6>
+                        <p class="my-0 text-italic">May 2019 - July 2019</p>
+                      </div>
+                    </div>
+                  </div>    
         </section>
 
         <section id="blog" class="blogposts">
@@ -96,11 +113,11 @@
         </section>
 
         <section id="contact" class="contact">
-            <!--<div>
+            <div>
                 <h2 class="section_name">Contact</h2>
-            </div>-->
+            </div>
             <div class="contact_desc">
-                <p>I'd like to work with you. I'm currently looking for a Developer role. If you like my work or have any question, please get in touch.</p>
+                <p>Hey! If you like my work or have any question, please get in touch.</p>
             </div>
             <div class="all_contacts">
                 <div class="contact_details">
@@ -139,7 +156,9 @@
         </section>
     </main>
     <footer class="py-3 bg-grey">
-        <p class="m-0 text-dark text-center ">Copyright &copy; Anmol Gupta</p>
+        <div class="container" style="padding-top:32px;padding-bottom: 32px">
+        <h6 class="m-0 text-dark text-center ">Copyright &copy; Anmol Gupta</h6>
+        </div>
     </footer>
 </body>
 </html>
