Update font size

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="all_skills">
                 <div class="skill_details">
                     <div class="skill_icon">
-                        <i class="fab fa-cuttlefish" style="font-size: 36px;color: #eb0c62;">++</i>
+                        <i class="fab fa-cuttlefish fa-3x" style="color: #eb0c62;">++</i>
                     </div>
                     <div class="skill_desc">
                         <p style="color: #eb0c62">C++</p>
@@ -65,22 +65,26 @@
                     </div>
                 </div>
             </div>
+            <div class="container mt-2">
+                <div class="row">
                 <div class="col-md-5 mt-2 mt-md-0">
                     <div class="rounded-lg bg-sec py-2 px-3">
                       <h4 class="text-underlined mt-1 text-site-sec">Experience</h4>
                       <hr>
                       <br>
                       <div class="expr-list-item">
-                        <h6>Cloud Native Developer - Intern <span class="float-right text-site-sec text-underlined">Semut Labs</span></h6>
+                        <h3>Cloud Native Developer - Intern <span class="float-right text-site-sec text-underlined">Semut Labs</span></h3>
                         <p class="my-0 text-italic">April 2020 - June 2020</p>
                       </div>
                       <br><hr><br>
                       <div class="expr-list-item">
-                        <h6>Project Trainee <span class="float-right text-site-sec text-underlined">CAIR, DRDO</span></h6>
+                        <h3>Project Trainee <span class="float-right text-site-sec text-underlined">CAIR, DRDO</span></h3>
                         <p class="my-0 text-italic">May 2019 - July 2019</p>
                       </div>
                     </div>
-                  </div>    
+                  </div>  
+                </div>
+            </div>  
         </section>
 
         <section id="blog" class="blogposts">
@@ -113,9 +117,9 @@
         </section>
 
         <section id="contact" class="contact">
-            <div>
+            <!-- <div>
                 <h2 class="section_name">Contact</h2>
-            </div>
+            </div> -->
             <div class="contact_desc">
                 <p>Hey! If you like my work or have any question, please get in touch.</p>
             </div>
@@ -157,7 +161,7 @@
     </main>
     <footer class="py-3 bg-grey">
         <div class="container" style="padding-top:32px;padding-bottom: 32px">
-        <h6 class="m-0 text-dark text-center ">Copyright &copy; Anmol Gupta</h6>
+        <h4 class="m-0 text-dark text-center ">Copyright &copy; Anmol Gupta</h4>
         </div>
     </footer>
 </body>
