Modify Experience add 1st Post

--- a/index.html
+++ b/index.html
@@ -64,32 +64,39 @@
                         <p style="color:#5FD4F4">Java</p>
                     </div>
                 </div>
-            </div>
-            <div class="container mt-2">
-                <div class="row">
-                <div class="col-md-5 mt-2 mt-md-0">
-                    <div class="rounded-lg bg-sec py-2 px-3">
-                      <h4 class="text-underlined mt-1 text-site-sec">Experience</h4>
-                      <hr>
-                      <br>
-                      <div class="expr-list-item">
-                        <h3>Cloud Native Developer - Intern <span class="float-right text-site-sec text-underlined">Semut Labs</span></h3>
-                        <p class="my-0 text-italic">April 2020 - June 2020</p>
-                      </div>
-                      <br><hr><br>
-                      <div class="expr-list-item">
-                        <h3>Project Trainee <span class="float-right text-site-sec text-underlined">CAIR, DRDO</span></h3>
-                        <p class="my-0 text-italic">May 2019 - July 2019</p>
-                      </div>
-                    </div>
-                  </div>  
-                </div>
             </div>  
         </section>
-
+        <section class="experience_intro">
+            <div class="experience_text">
+                <h2 class="text-underlined mt-1 text-site-sec">Experience</h2>
+                <hr>
+                <br>
+                <div class="expr-list-item">
+                    <h3>Cloud Native Developer Intern <span class="float-right text-site-sec text-underlined"> - Semut Labs</span></h3>
+                    <p class="my-0 text-italic">April 2020 - June 2020</p>
+                </div>
+                <br><hr><br>
+                <div class="expr-list-item">
+                    <h3>Project Trainee <span class="float-right text-site-sec text-underlined"> - CAIR, DRDO</span></h3>
+                    <p class="my-0 text-italic">May 2019 - July 2019</p>
+                </div>
+                <br><hr><br>
+            </div>
+        </section>
         <section id="blog" class="blogposts">
             <div>
                 <h2 class="section_name">Blog</h2>
+            </div>
+            <div class="blogposts_tiles">
+                <div class="blogpost_tile">
+                    <div>
+                        <a href="https://www.linkedin.com/posts/anmol-gupta-9520a914a_the-slowing-down-of-indian-economypdf-activity-6518402514424041472-y5MC" target="_blank"><img class="blogpost_pic" src="images/economy_background.jpg" alt="Blogpost_Screenshot"></a>
+                    </div>
+                    <div class="blogpost_text">
+                        <a class="blogpost_header" href="https://www.linkedin.com/posts/anmol-gupta-9520a914a_the-slowing-down-of-indian-economypdf-activity-6518402514424041472-y5MC" target="_blank"><h3>The Slowing Down of Indian Economy</h3></a>
+                        <a class="blogpost_desc" href="https://www.linkedin.com/posts/anmol-gupta-9520a914a_the-slowing-down-of-indian-economypdf-activity-6518402514424041472-y5MC" target="_blank"><p>I wrote this small piece on the Indian Economy an year ago - how it is slowing down and the reasons behind it. Hope you like it!</p></a>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -142,10 +149,10 @@
                 </div>
                 <div class="contact_details">
                     <div class="icon">
-                        <a href="https://twitter.com/anmolgupta1411" target="_blank"><i class="fab fa-twitter fa-3x" style="color:#0378A6"></i></a>
+                        <a href="https://www.facebook.com/anmolg.gupta/" target="_blank"><i class="fab fa-facebook fa-3x" style="color:#0378A6"></i></a>
                     </div>
                     <div class="desc">
-                        <a href="https://twitter.com/anmolgupta1411" target="_blank">Twitter</a>
+                        <a href="https://www.facebook.com/anmolg.gupta/" target="_blank">Facebook</a>
                     </div>
                 </div>
                 <div class="contact_details">
