change background image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="all_skills">
                 <div class="skill_details">
                     <div class="skill_icon">
-                        <i class="fab fa-cuttlefish fa-3x" style="color: #eb0c62;">++</i>
+                        <i class="fab fa-cuttlefish" style="font-size:48px;color: #eb0c62;">++</i>
                     </div>
                     <div class="skill_desc">
                         <p style="color: #eb0c62">C++</p>
@@ -42,10 +42,10 @@
                 </div>
                 <div class="skill_details">
                     <div class="skill_icon">
-                        <i class="fab fa-python fa-3x" style="color:#23079e"></i>
+                        <i class="fab fa-python fa-3x" style="color:#5d7de7"></i>
                     </div>
                     <div class="skill_desc">
-                        <p style="color:#23079e">Python</p>
+                        <p style="color:#5d7de7">Python</p>
                     </div>
                 </div>
                 <div class="skill_details">
