--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>Anmol Gupta</title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131045070-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -13,6 +14,17 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,200,300,400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet" type="text/css">
+
+    	<!-- CSS PLUGIN -->
+	<!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+	<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+	<!-- <link rel="stylesheet" href="css/owl.carousel.css">
+	<link rel="stylesheet" href="css/owl.theme.css">
+	<link rel="stylesheet" href="css/magnific-popup.css">
+	<link rel="stylesheet" href="css/flexslider.css">
+	<link rel="stylesheet" href="css/aos.css">
+	<link rel="stylesheet" href="css/popup.css"> -->
+	<link rel="stylesheet" href="css/form-style.css">
 </head>
 <body>
     <nav id="navbar" class="header">
@@ -131,6 +143,32 @@
                 <p>Hey! If you like my work or have any question, please get in touch.</p>
             </div>
             <div class="all_contacts">
+                <div class="col-md-8 col-md-offset-2">
+                <form name="gform" id="gform" enctype="text/plain" action="https://forms.gle/Ub1XGY4KdrYVqvnf7" target="hidden_iframe" onsubmit="submitted=true;">
+					<br>
+  				<input type="text" name="entry.747639910" id="entry.747639910" placeholder="Name"><br>
+  				<br>
+  				<input type="text" name="entry.1330815664" id="entry.1330815664" placeholder="Email"><br>
+					<br>
+					<input type="text" name="entry.1500249483" id="entry.1500249483" placeholder="Message"><br>
+  				<input type="submit" value="Submit">
+					</form>
+
+					<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
+
+					<script src="js/jquery-2.1.0.min.js"></script>
+					<script type="text/javascript">var submitted=false;</script>
+
+					<script type="text/javascript">
+
+					$('#gform').on('submit', function(e) {
+  							$('#gform *').fadeOut(2000);
+  							$('#gform').prepend('Your message has been sent...');
+  				});
+
+                    </script>
+                    </div>
+                    
                 <div class="contact_details">
                     <div class="icon">
                         <a href="https://www.linkedin.com/in/anmol-gupta-9520a914a" target="_blank"><i class="fab fa-linkedin fa-3x" style="color:#0378A6"></i></a>
@@ -161,6 +199,14 @@
                     </div>
                     <div class="desc">
                         <a href="mailto:anmol.gupta.che17@itbhu.ac.in" target="_blank">Mail</a>
+                    </div>
+                </div>
+                <div class="contact_details">
+                    <div class="icon">
+                        <a href="https://t.me/anmolgupta11" target="_blank"><i class="fab fa-telegram fa-3x" style="color:#0378A6"></i></a>
+                    </div>
+                    <div class="desc">
+                        <a href="https://t.me/anmolgupta11" target="_blank">Telegram</a>
                     </div>
                 </div>
             </div>
