--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 </head>
 <body>
     <nav id="navbar" class="header">
+        <!-- <ur>
+            <li><a href="#about">Anmol Gupta</a></li>
+        </ur> -->
         <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#blog" onClick="gtag('event','Test',{'event_category': 'Blog link','event_label': 'Go to blog'});">Blog</a></li>
@@ -46,34 +49,34 @@
             <div class="all_skills">
                 <div class="skill_details">
                     <div class="skill_icon">
-                        <i class="fab fa-cuttlefish" style="font-size:48px;color: #eb0c62;">++</i>
+                        <i class="fab fa-cuttlefish" style="font-size:48px;color: #fa0663;">++</i>
                     </div>
                     <div class="skill_desc">
-                        <p style="color: #eb0c62">C++</p>
+                        <p style="color: #fa0663">C++</p>
                     </div>
                 </div>
                 <div class="skill_details">
                     <div class="skill_icon">
-                        <i class="fab fa-python fa-3x" style="color:#5d7de7"></i>
+                        <i class="fab fa-python fa-3x" style="color:#1505a0"></i>
                     </div>
                     <div class="skill_desc">
-                        <p style="color:#5d7de7">Python</p>
+                        <p style="color:#1505a0">Python</p>
                     </div>
                 </div>
                 <div class="skill_details">
                     <div class="skill_icon">
-                        <i class="fab fa-html5 fa-3x" style="color:#DE4B30"></i>
+                        <i class="fab fa-html5 fa-3x" style="color:#f03412"></i>
                     </div>
                     <div class="skill_desc">
-                        <p style="color:#DE4B30">HTML5</p>
+                        <p style="color:#f03412">HTML5</p>
                     </div>
                 </div>
                 <div class="skill_details">
                     <div class="skill_icon">
-                        <i class="fab fa-java fa-3x" style="color:#5FD4F4"></i>
+                        <i class="fab fa-java fa-3x" style="color:#13c4f5"></i>
                     </div>
                     <div class="skill_desc">
-                        <p style="color:#5FD4F4">Java</p>
+                        <p style="color:#13c4f5">Java</p>
                     </div>
                 </div>
             </div>  
@@ -128,6 +131,19 @@
                             </div>
                             <div class="project_links">
                                 <a href="https://github.com/anmolgupta11/CAIR-Intern" target="_blank">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project_tile">
+                        <div>
+                            <img class="project_pic" src="images/Ecommerce_Tracker.PNG" alt="Project_Screenshot">
+                        </div>
+                        <div class="project_grid">
+                            <div class="project_title">
+                                <h3>Price Tracker for E-Commerce Websites</h3> 
+                            </div>
+                            <div class="project_links">
+                                <a href="https://github.com/anmolgupta11/E-Commerce-Price-Tracker" target="_blank">GitHub</a>
                             </div>
                         </div>
                     </div>
@@ -188,7 +204,7 @@
                     
                 <div class="contact_details">
                     <div class="icon">
-                        <a href="https://www.linkedin.com/in/anmol-gupta-9520a914a" target="_blank"><i class="fab fa-linkedin fa-3x" style="color:#0378A6"></i></a>
+                        <a href="https://www.linkedin.com/in/anmol-gupta-9520a914a" target="_blank"><i class="fab fa-linkedin fa-3x" style="color:#022f31"></i></a>
                     </div>
                     <div class="desc">
                         <a href="https://www.linkedin.com/in/anmol-gupta-9520a914a" target="_blank">LinkedIn</a>
@@ -196,7 +212,7 @@
                 </div>
                 <div class="contact_details">
                     <div class="icon">
-                        <a href="https://github.com/anmolgupta11" target="_blank"><i class="fab fa-github fa-3x" style="color:#0378A6"></i></a>
+                        <a href="https://github.com/anmolgupta11" target="_blank"><i class="fab fa-github fa-3x" style="color:#022f31"></i></a>
                     </div>
                     <div class="desc">
                         <a href="https://github.com/anmolgupta11" target="_blank">GitHub</a>
@@ -204,7 +220,7 @@
                 </div>
                 <div class="contact_details">
                     <div class="icon">
-                        <a href="https://www.facebook.com/anmolg.gupta/" target="_blank"><i class="fab fa-facebook fa-3x" style="color:#0378A6"></i></a>
+                        <a href="https://www.facebook.com/anmolg.gupta/" target="_blank"><i class="fab fa-facebook fa-3x" style="color:#022f31"></i></a>
                     </div>
                     <div class="desc">
                         <a href="https://www.facebook.com/anmolg.gupta/" target="_blank">Facebook</a>
@@ -212,7 +228,7 @@
                 </div>
                 <div class="contact_details">
                     <div class="icon">
-                        <a href="mailto:anmol.gupta.che17@itbhu.ac.in" target="_blank"><i class="fas fa-envelope fa-3x" style="color:#0378A6"></i></a>
+                        <a href="mailto:anmol.gupta.che17@itbhu.ac.in" target="_blank"><i class="fas fa-envelope fa-3x" style="color:#022f31"></i></a>
                     </div>
                     <div class="desc">
                         <a href="mailto:anmol.gupta.che17@itbhu.ac.in" target="_blank">Mail</a>
@@ -220,7 +236,7 @@
                 </div>
                 <div class="contact_details">
                     <div class="icon">
-                        <a href="https://t.me/anmolgupta11" target="_blank"><i class="fab fa-telegram fa-3x" style="color:#0378A6"></i></a>
+                        <a href="https://t.me/anmolgupta11" target="_blank"><i class="fab fa-telegram fa-3x" style="color:#022f31"></i></a>
                     </div>
                     <div class="desc">
                         <a href="https://t.me/anmolgupta11" target="_blank">Telegram</a>
