--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Anmol Gupta</title>
+    <link rel="icon" href="images/WebsiteLogo.png" type="image/x-icon">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131045070-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
